configs/k8s/overlays/production/replica-biometric-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: biometric-service
  namespace: fitness-platform-production
spec:
  replicas: 1
