configs/k8s/overlays/production/replica-classifier.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: classifier
  namespace: fitness-platform-production
spec:
  replicas: 1
