configs/k8s/overlays/production/replica-device-connector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: device-connector
  namespace: fitness-platform-production
spec:
  replicas: 1
