configs/k8s/overlays/production/replica-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: fitness-platform-production
spec:
  replicas: 1
