configs/k8s/overlays/production/replica-ml-classifier.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-classifier
  namespace: fitness-platform-production
spec:
  replicas: 1
