configs/k8s/overlays/production/replica-ml-generator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-generator
  namespace: fitness-platform-production
spec:
  replicas: 1
