configs/k8s/overlays/production/replica-training-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: training-service
  namespace: fitness-platform-production
spec:
  replicas: 1
