configs/k8s/overlays/production/replica-user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: fitness-platform-production
spec:
  replicas: 1
