configs/k8s/overlays/production/replicas-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: fitness-platform-production
spec:
  template:
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
        - name: redis
          securityContext:
            runAsNonRoot: true
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
