configs/k8s/overlays/production/resource-device-connector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: device-connector
  namespace: fitness-platform-production
spec:
  template:
    spec:
      containers:
        - name: device-connector
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
