configs/k8s/overlays/production/resource-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: fitness-platform-production
spec:
  template:
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
        - name: gateway
          securityContext:
            runAsNonRoot: true
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
