configs/k8s/overlays/production/resource-ml-generator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-generator
  namespace: fitness-platform-production
spec:
  template:
    spec:
      containers:
        - name: ml-generator
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 768Mi
