configs/k8s/overlays/production/resource-user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: fitness-platform-production
spec:
  template:
    spec:
      containers:
        - name: user-service
          securityContext:
            runAsNonRoot: true
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
